# automationkit

./: .gitignore  README.md  akit.code-workspace  ipython  pyproject.toml  setup.py
.github/workflows/: merge_gate.yml
console/: startup.py
deployment/: setup-environment
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_apidoc/: akit.cli.html  akit.cryptography.html  akit.datum.html  akit.environment.html  akit.html  akit.integration.agents.html  akit.integration.clients.html  akit.integration.cluster.html  akit.integration.coordinators.html  akit.integration.html  akit.integration.landscaping.html  akit.integration.mdns.html  akit.integration.serial.html  akit.integration.upnp.devices.html  akit.integration.upnp.extensions.dynamic.embeddeddevices.html  akit.integration.upnp.extensions.dynamic.html  akit.integration.upnp.extensions.dynamic.rootdevices.html  akit.integration.upnp.extensions.dynamic.services.MicrosoftCorporation.html  akit.integration.upnp.extensions.dynamic.services.NETGEAR.html  akit.integration.upnp.extensions.dynamic.services.NETGEARInc.html  akit.integration.upnp.extensions.dynamic.services.SonosInc.html  akit.integration.upnp.extensions.dynamic.services.html  akit.integration.upnp.extensions.html  akit.integration.upnp.generator.dynamic.html  akit.mixins.html  (+13 more)
examples/: coordinator_example.py  example_audio.py  example_class_var.py  example_ssdp.py  packet.json
service/: apoddb.py  app_automation_pod.py  app_controller.py
sphinx/: Makefile
testroot/: landscapedescription.json
(+399 files in other folders)
