[tool.poetry]
name = "automationkit"
version = "0.1.0"
description = "Distributed Automation Framework"
authors = ["Myron Walker <myron.walker@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
coverage = "ipython"
ipython = "^7.19.0"
netifaces = "^0.10.9"
paramiko = "^2.7.2"
psycopg2 = "^2.8.6"
requests = "^2.25.0"
SQLAlchemy = "^1.3.20"
SQLAlchemy-Utils = "^0.36.8"
ssdp = "^1.0.1"
PyYAML = "^5.3.1"
dlipower = "^1.0.176"
Werkzeug = "0.16.1"
Flask = "^1.1.2"
flask-restplus = "^0.13.0"
sphinx-rtd-theme = "^0.5.0"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
rope = "^0.18.0"
Sphinx = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
